--- a/build.gradle
+++ b/build.gradle
@@ -19,12 +19,15 @@ repositories {
 }
 
 dependencies {
-	implementation group: 'com.mysql', name: 'mysql-connector-j', version: '8.0.33'
-	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
+	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+ 	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
+	implementation group: 'nz.net.ultraq.thymeleaf', name: 'thymeleaf-layout-dialect', version: '3.2.1'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	compileOnly 'org.projectlombok:lombok'
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+	implementation group: 'com.mysql', name: 'mysql-connector-j', version: '8.0.33'
+
 }
 
 tasks.named('test') {
